consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  labels:
    deployment: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      name: consumer
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer-container
          image: pashonokk/consumer-service:v1.0
          ports:
            - containerPort: 8081
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
