consumer-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-external-service
spec:
  type: LoadBalancer
  selector:
    app: consumer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001
